# cold-start-cafe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: loader.py  narrations.json
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  challenge.py  enums.py  movies.py  simulation.py
backend/app/routers/: challenge.py  movies.py  narration.py  simulation.py
backend/app/services/: challenge_engine.py  ground_truth.py  metrics.py  session_manager.py  simulation_engine.py  validators.py
backend/app/services/algorithms/: __init__.py  base.py  collaborative.py  content_based.py  hybrid.py  popularity.py
backend/app/services/narration/: __init__.py  challenge_narrator.py  llm_narrator.py  templates.py
backend/tests/: conftest.py  test_algorithm_pipeline.py  test_algorithms.py  test_challenge_api.py  test_data_loader.py  test_health.py  test_metrics.py  test_movies_api.py  test_narration.py  test_simulation_api.py
data/: movies.parquet  ratings.parquet  users.parquet
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlgorithmTimeline.tsx  ErrorBoundary.tsx  MetricsChart.tsx  MoviePicker.tsx  MovieSearchModal.tsx  NarratorPanel.tsx  Navbar.tsx  PageTransition.tsx  RecommendationCards.tsx  SignalPanel.tsx  (+3 more)
scripts/: prepare_data.py
(+12 files in other folders)
