[project]
name = "coldstart-cafe-backend"
version = "0.1.0"
description = "ColdStart Café — interactive cold-start problem simulator backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=2.0.0",
    "scikit-surprise>=1.1.4",
    "scikit-learn>=1.6.0",
    "anthropic>=0.42.0",
    "structlog>=24.4.0",
    "sse-starlette>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
